Link to repository.

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
     <link rel="apple-touch-icon-precomposed" href="https://victoryboogiewoogie.com/apple-touch-icon-precomposed.png">
     <link rel="author" href="https://alexanderchristiaanjacob.com/" title="Alexander Christiaan Jacob">
     <link rel="canonical" href="https://victoryboogiewoogie.com/">
+    <link rel="help" href="https://github.com/acjbizar/VictoryBoogieWoogie.com">
     <link rel="manifest" href="https://victoryboogiewoogie.com/manifest.json">
     <style>
         *{border:0;border-radius:0;list-style:none;margin:0;outline:0;padding:0;text-decoration:none}
