Tweak to please The Validator

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
             background-image: -o-radial-gradient(center, ellipse cover,  rgba(253,246,238,1) 0%,rgba(158,150,129,1) 100%);
             background-image: -ms-radial-gradient(center, ellipse cover,  rgba(253,246,238,1) 0%,rgba(158,150,129,1) 100%);
             background-image: radial-gradient(ellipse at center,  rgba(253,246,238,1) 0%,rgba(158,150,129,1) 100%);
-            filter: progid:DXImageTransform.Microsoft.gradient( startColorstr=\'#fdf6ee\', endColorstr=\'#9e9681\',GradientType=1 )
+            filter: progid:DXImageTransform.Microsoft.gradient( startColorstr=\'#fdf6ee\', endColorstr=\'#9e9681\',GradientType=1 );
         }
 
         @media(max-width:40em){
